--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ stages:
 
 build:
     stage: build
-    image: ubuntu:trusty
+    image: ubuntu:focal
     before_script:
-        - sudo apt-get -qq update && sudo apt-get install -y texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-full
+        - sudo apt -qq update && sudo apt install -y texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-full
     script:
         - mkdir _build
         - pdflatex -output-directory _build ./tex/ParhamNikdouzCV.tex
@@ -14,16 +14,18 @@ build:
         paths:
             - ./_build/ParhamNikdouzCV.pdf
         expire_in: 30 min
-
-deploy:
-    stage: deploy
-    dependencies:
-        - build
-    script:
-        - cp ./_build/ParhamNikdouzCV.pdf .
-        - cp ./_build/ParhamNikdouzCV.pdf /root
-        - echo "Uploaded to server!"
-    tags:
-        - shell_executor
     only:
         - master
+
+# deploy:
+#     stage: deploy
+#     dependencies:
+#         - build
+#     script:
+#         - cp ./_build/ParhamNikdouzCV.pdf .
+#         - cp ./_build/ParhamNikdouzCV.pdf /root
+#         - echo "Uploaded to server!"
+#     tags:
+#         - shell_executor
+#     only:
+#         - master
