--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,10 @@ build:
     stage: build
     image: ubuntu:focal
     before_script:
+        - export DEBIAN_FRONTEND=noninteractive
+        - ln -fs /usr/share/zoneinfo/Asia/Tehran /etc/localtime
+        - apt-get install -y tzdata
+        - dpkg-reconfigure --frontend noninteractive tzdata
         - apt-get -qq update && apt-get install -y texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-full
     script:
         - mkdir _build
