--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,8 @@ build:
     image: ubuntu:focal
     before_script:
         - apt-get -qq update
-        - export DEBIAN_FRONTEND=noninteractive
-        - ln -fs /usr/share/zoneinfo/Asia/Tehran /etc/localtime
-        - apt-get install -y tzdata
-        - dpkg-reconfigure --frontend noninteractive tzdata
-        - apt-get install -y texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-full
+        - DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata
+        - apt-get install -y texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-full git
     script:
         - mkdir _build
         - pdflatex -output-directory _build ./tex/ParhamNikdouzCV.tex
